tests/expectations/parser-statement/statement/async_fail.out
Error [EPAR0370009]: unexpected string: expected 'expression', found 'async'
    --> test_0:1:1
     |
   1 | async finalize(foo);
     | ^^^^^
